<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/display_time_zone"
        style="@style/finePrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/set_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_location" />

    <Button
        android:id="@+id/set_calculation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculation" />

    <Button
        android:id="@+id/set_notification"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification" />

    <Button
        android:id="@+id/set_interface"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sinterface" />

</LinearLayout>